--- a/cmd/web-app/templates/layouts/dtox.html
+++ b/cmd/web-app/templates/layouts/dtox.html
@@ -172,6 +172,9 @@
     })();
 </script>
 <!--End of Tawk.to Script-->
+
+<script src="{{ SiteAssetUrl "/assets/js/vendors~app.bundle.js" }}"></script>
+<script src="{{ SiteAssetUrl "/assets/js/app.bundle.js" }}?t="></script>
 </body>
 
 </html>
