--- a/cmd/web-app/templates/partials/app-sidebar.tmpl
+++ b/cmd/web-app/templates/partials/app-sidebar.tmpl
@@ -41,6 +41,11 @@
                     <i class="fas fa-fw fa-layer-group"></i> 
                     <span>Classes</span></a>
             </li>
+            <li class="nav-item {{block "subclassesActive" .}}{{end}}">
+                <a class="nav-link" href="/admin/subclasses">
+                    <i class="fas fa-fw fa-layer-group"></i> 
+                    <span>Subclasses</span></a>
+            </li>
             <li class="nav-item {{block "subjectsActive" .}}{{end}}">
                 <a class="nav-link" href="/admin/subjects">
                     <i class="fas fa-fw fa-layer-group"></i>
