--- a/cmd/web-app/templates/content/admin-subclasses-view.gohtml
+++ b/cmd/web-app/templates/content/admin-subclasses-view.gohtml
@@ -7,8 +7,8 @@
 
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="{{ .urlClassesIndex }}">Classes</a></li>
-            <li class="breadcrumb-item"><a href="{{ .urlClassesView }}">{{ .class.Name }}</a></li>
+            <li class="breadcrumb-item"><a href="{{ .urlSubclassesIndex }}">Subclasses</a></li>
+            <li class="breadcrumb-item"><a href="{{ .urlSubclassesView }}">{{ .class.Name }}</a></li>
             <li class="breadcrumb-item active" aria-current="page">View</li>
         </ol>
     </nav>
@@ -26,7 +26,7 @@
                 </a>
                 <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink" x-placement="bottom-end" style="position: absolute; transform: translate3d(-156px, 19px, 0px); top: 0px; left: 0px; will-change: transform;">
                     <div class="dropdown-header">Actions</div>
-                    <a class="dropdown-item" href="{{ .urlClassesUpdate }}">Update Details</a>
+                    <a class="dropdown-item" href="{{ .urlSubclassesUpdate }}">Update Details</a>
                     {{ if HasRole $._Ctx "admin" }}
                         <form method="post"><input type="hidden" name="action" value="archive" /><input type="submit" value="Archive Class" class="dropdown-item"></form>
                     {{ end }}
@@ -37,7 +37,11 @@
             <div class="row">
                 <div class="col-md-6">
                     <p>
-                        <small>Name</small><br/>
+                        <small>Class</small><br/>
+                        <b>{{ .class.Class }}</b>
+                    </p>
+                    <p>
+                        <small>Subclass</small><br/>
                         <b>{{ .class.Name }}</b>
                     </p>
                 </div>
