--- a/cmd/web-app/templates/content/user-login.gohtml
+++ b/cmd/web-app/templates/content/user-login.gohtml
@@ -30,13 +30,13 @@
                                         <div class="form-group">
                                             <input type="email"
                                                    class="form-control form-control-user {{ ValidationFieldClass $.validationErrors "AuthenticateRequest.Email" }}"
-                                                   name="Email" value="{{ $.form.Email }}" placeholder="Enter Email Address...">
+                                                   name="Email" placeholder="Enter Email Address...">
                                             {{template "invalid-feedback" dict "fieldName" "AuthenticateRequest.Email" "validationDefaults" $.validationDefaults "validationErrors" $.validationErrors }}
                                         </div>
                                         <div class="form-group">
                                             <input type="password"
                                                    class="form-control form-control-user {{ ValidationFieldClass $.validationErrors "AuthenticateRequest.Password" }}"
-                                                   name="Password" value="{{ $.form.Password }}" placeholder="Password">
+                                                   name="Password" placeholder="Password">
                                             {{template "invalid-feedback" dict "fieldName" "AuthenticateRequest.Password" "validationDefaults" $.validationDefaults "validationErrors" $.validationErrors }}
                                         </div>
                                         <div class="form-group">
