Add student to subclass

--- a/cmd/web-app/templates/content/admin-students-index.gohtml
+++ b/cmd/web-app/templates/content/admin-students-index.gohtml
@@ -1,5 +1,5 @@
 {{define "title"}}Students{{end}}
-{{define "subjectsActive"}}active{{end}}
+{{define "studentsActive"}}active{{end}}
 {{define "content"}}
 
     <nav aria-label="breadcrumb">
