--- a/cmd/web-app/templates/content/admin-subclasses-view.gohtml
+++ b/cmd/web-app/templates/content/admin-subclasses-view.gohtml
@@ -42,8 +42,12 @@
                         <b>{{ .class.Class }}</b>
                     </p>
                     <p>
-                        <small>Subclass</small><br/>
+                        <small>Subclass</small><br/> 
                         <b>{{ .class.Name }}</b>
+                    </p>
+                    <p>
+                        <small>Link</small><br/> 
+                        <b>{{ .class.Link }}</b>
                     </p>
                 </div>
             </div>
@@ -117,6 +121,9 @@
                                 <td>{{ $t.Period }}</td>
                                 <td>{{ $t.Subject }}</td>
                                 <td>{{ $t.Teacher }}</td>
+                                <td>
+                                   
+                                </td>
                             </tr>
                             {{ end }}
                         </tbody>
