--- a/cmd/web-app/templates/content/admin-subclasses-create.gohtml
+++ b/cmd/web-app/templates/content/admin-subclasses-create.gohtml
@@ -55,6 +55,16 @@
                         </div>
                     </div>
 
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <label for="inputName">Lesson Link</label>
+                            <input type="text" id="inputName"
+                                   class="form-control {{ ValidationFieldClass $.validationErrors "Link" }}"
+                                   placeholder="Enter a link for the class" name="Link" value="{{ .form.Link }}" required>
+                            {{template "invalid-feedback" dict "fieldName" "Link" "validationDefaults" $.validationDefaults "validationErrors" $.validationErrors }}
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
