--- a/resources/templates/shared/emails/welcome_email.html
+++ b/resources/templates/shared/emails/welcome_email.html
@@ -1,102 +1,242 @@
-<link
-  href="https://fonts.googleapis.com/css?family=Poppins|Roboto"
-  rel="stylesheet"
-/>
-<style>
-  body {
-    font-family: "Roboto", monospace;
-    font-size: 12px;
-    background: #ccc;
-    color: #333;
-    padding: 0 0 0 0;
-    margin: 0 0 0 0;
+<!doctype html>
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Welcome to Remote School</title>
+    <style>
+@media only screen and (max-width: 620px) {
+  table[class=body] h1 {
+    font-size: 28px !important;
+    margin-bottom: 10px !important;
   }
+
+  table[class=body] p,
+table[class=body] ul,
+table[class=body] ol,
+table[class=body] td,
+table[class=body] span,
+table[class=body] a {
+    font-size: 16px !important;
+  }
+
+  table[class=body] .wrapper,
+table[class=body] .article {
+    padding: 10px !important;
+  }
+
+  table[class=body] .content {
+    padding: 0 !important;
+  }
+
+  table[class=body] .container {
+    padding: 0 !important;
+    width: 100% !important;
+  }
+
+  table[class=body] .main {
+    border-left-width: 0 !important;
+    border-radius: 0 !important;
+    border-right-width: 0 !important;
+  }
+
+  table[class=body] .btn table {
+    width: 100% !important;
+  }
+
+  table[class=body] .btn a {
+    width: 100% !important;
+  }
+
+  table[class=body] .img-responsive {
+    height: auto !important;
+    max-width: 100% !important;
+    width: auto !important;
+  }
+}
+@media all {
+  .ExternalClass {
+    width: 100%;
+  }
+
+  .ExternalClass,
+.ExternalClass p,
+.ExternalClass span,
+.ExternalClass font,
+.ExternalClass td,
+.ExternalClass div {
+    line-height: 100%;
+  }
+
+  .apple-link a {
+    color: inherit !important;
+    font-family: inherit !important;
+    font-size: inherit !important;
+    font-weight: inherit !important;
+    line-height: inherit !important;
+    text-decoration: none !important;
+  }
+
+  #MessageViewBody a {
+    color: inherit;
+    text-decoration: none;
+    font-size: inherit;
+    font-family: inherit;
+    font-weight: inherit;
+    line-height: inherit;
+  }
+
+  .btn-primary table td:hover {
+    background-color: #34495e !important;
+  }
+
+  .btn-primary a:hover {
+    background-color: #34495e !important;
+    border-color: #34495e !important;
+  }
+}
 </style>
-<div style="padding: 0% 10% 10% 10%;">
-  <div
-    style="
-      padding: 10% 10% 10% 10%;
-      background: white;
-      word-wrap: break-word;
-      border-radius: 10px 10px 10px 10px;
-    "
-  >
-    <p>Dear {{ .Name }}.</p>
-    <p>
-      Thank you for signing up on
-      <a href="https://www.remoteschool.com.ng" target="_blank">Remote School</a
-      >. Here are your login details<br />
-      <b>Email</b>: {{ .Email }} <b>Password</b>: {{ .Password }}
-    </p>
+  </head>
+  <body class="" style="background-color: #f6f6f6; font-family: sans-serif; -webkit-font-smoothing: antialiased; font-size: 14px; line-height: 1.4; margin: 0; padding: 0; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%;">
+    <span class="preheader" style="color: transparent; display: none; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">
+        This is the information on how to access your free lessons
+    </span>
+    <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="body" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #f6f6f6; width: 100%;" width="100%" bgcolor="#f6f6f6">
+      <tr>
+        <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;" valign="top">&nbsp;</td>
+        <td class="container" style="font-family: sans-serif; font-size: 14px; vertical-align: top; display: block; max-width: 580px; padding: 10px; width: 580px; margin: 0 auto;" width="580" valign="top">
+          <div class="content" style="box-sizing: border-box; display: block; margin: 0 auto; max-width: 580px; padding: 10px;">
 
-    <p>
-      You have been scheduled to take two free lessons as follows
-    </p>
-    <ul>
-        <ol>{{ .Subject1 }}: {{ .Lesson1Date }}</ol>
-        <ol>{{ .Subject2 }}: {{ .Lesson2Date }}</ol>
-    </ul>
-    <p>
-      Use the following link to join the class<br />
-      https://bit.ly/remoteschool-free-maths
-    </p>
+            <!-- START CENTERED WHITE CONTAINER -->
+            <table role="presentation" class="main" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; background: #ffffff; border-radius: 3px; width: 100%;" width="100%">
 
-    <h6>How to join the class</h6>
-    <p>
-      You can join the class using a computer, tablet or mobile phone. See
-      instruction below
-    </p>
+              <!-- START MAIN CONTENT AREA -->
+              <tr>
+                <td class="wrapper" style="font-family: sans-serif; font-size: 14px; vertical-align: top; box-sizing: border-box; padding: 20px;" valign="top">
+                  <table role="presentation" border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;" width="100%">
+                    <tr>
+                      <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;" valign="top">
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">Hi {{ .Name }},</p>
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">Thank you for signing up on
+                            <a href="https://www.remoteschool.com.ng" target="_blank" style="color: #3498db; text-decoration: underline;">Remote School</a>.
+                           </p>
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">You have been given one free lesson</p>
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;"> 
+                            Use the following information to access your free Remote School account<br>
+                            <b>Email</b>: {{ .Email }} <b>Password</b>: {{ .Password }}.
+                        </p>
+                        <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; box-sizing: border-box; width: 100%;" width="100%">
+                          <tbody>
+                            <tr>
+                              <td align="left" style="font-family: sans-serif; font-size: 14px; vertical-align: top; padding-bottom: 15px;" valign="top">
+                                <table role="presentation" border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: auto;">
+                                  <tbody>
+                                    <tr>
+                                      <td style="font-family: sans-serif; font-size: 14px; vertical-align: top; border-radius: 5px; text-align: center; background-color: #3498db;" valign="top" align="center" bgcolor="#3498db"> <a href="https://www.remoteschool.com.ng/login" target="_blank" style="border: solid 1px #3498db; border-radius: 5px; box-sizing: border-box; cursor: pointer; display: inline-block; font-size: 14px; font-weight: bold; margin: 0; padding: 12px 25px; text-decoration: none; text-transform: capitalize; background-color: #3498db; border-color: #3498db; color: #ffffff;">Login</a> </td>
+                                    </tr>
+                                  </tbody>
+                                </table>
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
+                        
+                      
+                          <h6>How to join the class</h6>
+                          <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
+                            You can join the class using a computer, tablet or mobile phone. See
+                            instruction below
+                          </p>
+                      
+                          <b>MOBILE PHONES/TABLETS:</b><br>
+                      
+                          <ul style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
+                            <ol style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
+                              Download Microsoft Teams from Playstore  and install on your phone
+                            </ol>
+                            <ol style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
+                                <a href="https://www.remoteschool.com.ng/login" target="_blank" style="color: #3498db; text-decoration: underline;">Login</a> to 
+                                https://www.remoteschool.com.ng using the details provided above.
+                            </ol>
+                            <ol style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
+                              Click Join Classroom on the lesson you want to join.
+                               Note: the button will only appear during the time of the class
+                            </ol>
+                            <ol style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
+                              Enter your Name and click Join
+                            </ol>
+                          </ul>
+                          <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
+                            You will see a message that says “someone in  the meeting will let you in
+                            soon”. At this point wait patiently.
+                          </p>
+                      
+                          <b>LAPTOP OR DESKTOP COMPUTER:</b><br>
+                          <ul style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
+                            <ol style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
+                              Download Google Chrome browser and install (if not already installed) or
+                              installed Microsoft Teams  on your
+                              computer(from https://www.microsoft.com/en-us/microsoft-365/microsoft-teams/download-app
+                            </ol>
+                            <ol style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
+                                <a href="https://www.remoteschool.com.ng/login" target="_blank" style="color: #3498db; text-decoration: underline;">Login</a> to 
+                                https://www.remoteschool.com.ng using the details provided above.
+                            </ol>
+                            <ol style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
+                              Click Join Classroom on the lesson you want to join.
+                               Note: the button will only appear during the time of the class
+                            </ol>
+                            <ol style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
+                              Click on  use web app instead
+                            </ol>
+                            <ol style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
+                              Enter your name and click join
+                            </ol>
+                          </ul>
+                          <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
+                            You will see a message that says “someone in the meeting will let you in
+                            soon”. At this point wait patiently.
+                          </p>
+                          <br>
+                          <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
+                            NOTE: Practice to ensure that you reach this point (someone in the meeting
+                            will let you in soon) before the actual time for the lesson. If you
+                            encounter any issue, call 08034282143 before the lesson starts. Thanks
+                          </p>
 
-    <b>MOBILE PHONES/TABLETS:</b><br />
+                      </td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
 
-    <ul>
-      <ol>
-        Download Microsoft Teams from Playstore  and install on your phone
-      </ol>
-      <ol>
-        Open the link in your in email with  Teams downloaded
-      </ol>
-      <ol>
-        Click Join as a Guest
-      </ol>
-      <ol>
-        Enter your Name and click Join
-      </ol>
-    </ul>
-    <p>
-      You will see a message that says “someone in  the meeting will let you in
-      soon”. At this point wait patiently.
-    </p>
+            <!-- END MAIN CONTENT AREA -->
+            </table>
+            <!-- END CENTERED WHITE CONTAINER -->
 
-    <b>LAPTOP OR DESKTOP COMPUTER:</b><br />
-    <ul>
-      <ol>
-        Download Google Chrome browser and install (if not already installed) or
-        installed Microsoft Teams  on your
-        computer(from https://www.microsoft.com/en-us/microsoft-365/microsoft-teams/download-app
-      </ol>
-      <ol>
-        Open the link in your email with any of the downloaded software.
-      </ol>
-      <ol>
-        Click on  use web app instead
-      </ol>
-      <ol>
-        Enter your name and click join
-      </ol>
-    </ul>
-    <p>
-      You will see a message that says “someone in the meeting will let you in
-      soon”. At this point wait patiently.
-    </p>
-    <br />
-    <p>
-      NOTE: Practice to ensure that you reach this point (someone in the meeting
-      will let you in soon) before the actual time for the lesson. If you
-      encounter any issue, call 08034282143 before the lesson starts. Thanks
-    </p>
+            <!-- START FOOTER -->
+            <div class="footer" style="clear: both; margin-top: 10px; text-align: center; width: 100%;">
+              <table role="presentation" border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;" width="100%">
+                <tr>
+                  <td class="content-block" style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; color: #999999; font-size: 12px; text-align: center;" valign="top" align="center">
+                    <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;"><a href="https://www.remoteschool.com.ng" style="text-decoration: underline; color: #999999; font-size: 12px; text-align: center;">Remote School</a>, 50 Orile Road, Agege Lagos</span>
+                    <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;">https://www.remoteschool.com.ng</span>
+                    <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;">+234 701 000 7062</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="content-block powered-by" style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; color: #999999; font-size: 12px; text-align: center;" valign="top" align="center">
+                    Powered by <a href="http://remoteschool.com.ng" style="color: #999999; font-size: 12px; text-align: center; text-decoration: none;">Merry World</a>.
+                  </td>
+                </tr>
+              </table>
+            </div>
+            <!-- END FOOTER -->
 
-    <p><a href="{{ .Url }}" target="_blank">{{ .Url }}</a></p>
-    <p>&nbsp;<br />- Remote School</p>
-  </div>
-</div>
+          </div>
+        </td>
+        <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;" valign="top">&nbsp;</td>
+      </tr>
+    </table>
+  </body>
+</html>
