--- a/resources/templates/shared/emails/welcome.raw.html
+++ b/resources/templates/shared/emails/welcome.raw.html
@@ -355,7 +355,7 @@
                         <p>Thank you for signing up on
                             <a href="https://www.remoteschool.com.ng" target="_blank">Remote School</a>.
                            </p>
-                        <p>You have been given one free lesson</p>
+                        <p>You have successfully unlocked you one week free lesson</p>
                         <p> 
                             Use the following information to access your free Remote School account<br/>
                             <b>Email</b>: {{ .Email }} <b>Password</b>: {{ .Password }}.
@@ -377,7 +377,7 @@
                         </table>
                         
                       
-                          <h6>How to join the class</h6>
+                          <h3>How to join the class</h3>
                           <p>
                             You can join the class using a computer, tablet or mobile phone. See
                             instruction below
