--- a/resources/templates/shared/emails/welcome_email.html
+++ b/resources/templates/shared/emails/welcome_email.html
@@ -120,7 +120,7 @@ table[class=body] .article {
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">Thank you for signing up on
                             <a href="https://www.remoteschool.com.ng" target="_blank" style="color: #3498db; text-decoration: underline;">Remote School</a>.
                            </p>
-                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">You have been given one free lesson</p>
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">You have successfully unlocked you one week free lesson</p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;"> 
                             Use the following information to access your free Remote School account<br>
                             <b>Email</b>: {{ .Email }} <b>Password</b>: {{ .Password }}.
@@ -142,7 +142,7 @@ table[class=body] .article {
                         </table>
                         
                       
-                          <h6>How to join the class</h6>
+                          <h3>How to join the class</h3>
                           <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
                             You can join the class using a computer, tablet or mobile phone. See
                             instruction below
