Login link in email

--- a/resources/templates/shared/emails/welcome_email.html
+++ b/resources/templates/shared/emails/welcome_email.html
@@ -155,7 +155,7 @@ table[class=body] .article {
                               Download Microsoft Teams from Playstore  and install on your phone
                             </ol>
                             <ol style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
-                                <a href="https://www.remoteschool.com.ng/login" target="_blank" style="color: #3498db; text-decoration: underline;">Login</a> to 
+                                <a href="https://remoteschool.com.ng/user/login" target="_blank" style="color: #3498db; text-decoration: underline;">Login</a> to 
                                 https://www.remoteschool.com.ng using the details provided above.
                             </ol>
                             <ol style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
