--- a/resources/templates/shared/emails/welcome.raw.html
+++ b/resources/templates/shared/emails/welcome.raw.html
@@ -367,7 +367,7 @@
                                 <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                                   <tbody>
                                     <tr>
-                                      <td> <a href="https://www.remoteschool.com.ng/login" target="_blank">Login</a> </td>
+                                      <td> <a href="https://remoteschool.com.ng/user/login" target="_blank">Login</a> </td>
                                     </tr>
                                   </tbody>
                                 </table>
