--- a/resources/templates/shared/emails/welcome.raw.html
+++ b/resources/templates/shared/emails/welcome.raw.html
@@ -358,7 +358,7 @@
                         <p>You have successfully unlocked you one week free lesson</p>
                         <p> 
                             Use the following information to access your free Remote School account<br/>
-                            <b>Email</b>: {{ .Email }} <b>Password</b>: {{ .Password }}.
+                            <b>Email</b>: {{ .Email }} <b>Password</b>: {{ .Password }}
                         </p>
                         <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
                           <tbody>
