--- a/resources/templates/shared/emails/welcome_email.html
+++ b/resources/templates/shared/emails/welcome_email.html
@@ -123,7 +123,7 @@ table[class=body] .article {
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">You have successfully unlocked you one week free lesson</p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;"> 
                             Use the following information to access your free Remote School account<br>
-                            <b>Email</b>: {{ .Email }} <b>Password</b>: {{ .Password }}.
+                            <b>Email</b>: {{ .Email }} <b>Password</b>: {{ .Password }}
                         </p>
                         <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; box-sizing: border-box; width: 100%;" width="100%">
                           <tbody>
