--- a/cmd/web-app/templates/content/root-dashboard-students.gohtml
+++ b/cmd/web-app/templates/content/root-dashboard-students.gohtml
@@ -120,8 +120,9 @@
         {{ if gt (len .timetables) 0 }}
         <div>
           <h4>Timetable</h4>
-          <div class="col-md-4 col-sm-12">
+          <div class="row">
             {{ range $t := .timetables }}
+            <div class="col-md-4 col-sm-12">
             <div class="card" style="width: 18rem;">
               <div class="card-header">
                 {{ $t.Day }} {{ $t.Period }}
@@ -129,16 +130,17 @@
               <ul class="list-group list-group-flush">
                 <li class="list-group-item">{{ $t.Subject }}</li>
                 <li class="list-group-item">{{ $t.Teacher }}</li>
+                {{ if isLessonTime $._Ctx $t }}
                 <li class="list-group-item">
-                  {{ if isLessonTime $._Ctx $t }}
                   <a href="/lessons/join/{{ $t.ID }}" class="btn btn-success" target="_blank">Go to Classroom</a>
-                  {{ end }}
                 </li>
+                {{ end }}
               </ul>
             </div>
-            {{ end }}
-
           </div>
+            {{ end }}
+          </div>
+          
         </div>
         {{ end }}
 
