--- a/cmd/web-app/templates/content/root-dashboard-students.gohtml
+++ b/cmd/web-app/templates/content/root-dashboard-students.gohtml
@@ -122,7 +122,7 @@
           <h4>Timetable</h4>
           <div class="row">
             {{ range $t := .timetables }}
-            <div class="col-md-4 col-sm-12">
+            <div class="col-md-4 col-sm-12 mt-3">
             <div class="card" style="width: 18rem;">
               <div class="card-header">
                 {{ $t.Day }} {{ $t.Period }}
