--- a/cmd/web-app/templates/content/root-dashboard-students.gohtml
+++ b/cmd/web-app/templates/content/root-dashboard-students.gohtml
@@ -19,7 +19,7 @@
   <div class="col">
     <div class="card">
       <div class="card-body">
-        <div class="jumbotron" data-controller="payment" style="display: none;">
+        <div class="jumbotron" data-controller="payment">
           {{ if eq (len .subscriptions) 0 }}
           <h1 class="display-4">Subscribe and start learning!</h1>
           <p class="lead">
