--- a/cmd/web-app/templates/content/root-dashboard-students.gohtml
+++ b/cmd/web-app/templates/content/root-dashboard-students.gohtml
@@ -19,6 +19,12 @@
   <div class="col">
     <div class="card">
       <div class="card-body">
+        {{ if .sssThreeStudent }} 
+        <div class="alert alert-success mt-2 mb-3" role="alert">
+          Take advantage of our WAEC/NECO promo today. Just 10,000 Naira for all subjects.
+          <a href="https://paystack.com/pay/remote-school-waec-neco" class="btn btn-lg btn-danger">Make Payment Now</a>
+        </div>
+        {{ else }}
         <div class="jumbotron" data-controller="payment">
           {{ if eq (len .subscriptions) 0 }}
           <h1 class="display-4">Subscribe and start learning!</h1>
@@ -109,6 +115,7 @@
 
           </div>
         </div>
+        {{ end }}
 
         <p>
           {{ if isWorkHour }}
