--- a/cmd/web-app/templates/content/root-dashboard-students.gohtml
+++ b/cmd/web-app/templates/content/root-dashboard-students.gohtml
@@ -22,7 +22,7 @@
         {{ if .sssThreeStudent }} 
         <div class="alert alert-success mt-2 mb-3" role="alert">
           Take advantage of our WAEC/NECO promo today. Just 10,000 Naira for all subjects.
-          <a href="https://paystack.com/pay/remote-school-waec-neco" class="btn btn-lg btn-danger">Make Payment Now</a>
+          <a href="https://paystack.com/pay/remote-school-waec-neco" class="btn btn-lg btn-danger" target="_blank">Make Payment Now</a>
         </div>
         {{ else }}
         <div class="jumbotron" data-controller="payment">
