--- a/cmd/web-app/templates/content/users-update.gohtml
+++ b/cmd/web-app/templates/content/users-update.gohtml
@@ -52,7 +52,7 @@
                             <label for="inputEmail">Phone Number</label>
                             <input type="text"
                                    class="form-control {{ ValidationFieldClass $.validationErrors "UserUpdateRequest.Phone" }}"
-                                   placeholder="enter phone number" name="Email" value="{{ .form.Phone }}" required>
+                                   placeholder="enter phone number" name="Phone" value="{{ .form.Phone }}" required>
                             {{template "invalid-feedback" dict "fieldName" "UserUpdateRequest.Phone" "validationDefaults" $.userValidationDefaults "validationErrors" $.validationErrors }}
                         </div>
                         <div class="form-group">
@@ -91,9 +91,8 @@
                 </div>
             </div>
         </div>
-    </form>
-
-    <form class="user" method="post" novalidate>
+        
+        
         <div class="card mt-4">
             <div class="card-body">
                 <div class="row mb-2">
