--- a/cmd/web-app/templates/content/dtox-contact.html
+++ b/cmd/web-app/templates/content/dtox-contact.html
@@ -1,5 +1,5 @@
 {{ template "../layouts/dtox.html" .}}
-{{define "title"}}Contact Remote School{{end}}
+{{define "title"}}Contact Smart Head{{end}}
 {{define "description"}}Cloud-based learning platform that offers safe and
 affordable interactive online private teaching and learning.{{end}}
 {{define "contactActive"}}active{{end}}
