--- a/cmd/web-app/templates/content/dtox-pricing.html
+++ b/cmd/web-app/templates/content/dtox-pricing.html
@@ -13,7 +13,7 @@
         <p class="lead mb-5 text-center">
             Our price is very affordable for online learning.<br/>
             Pay for any of the plans below and send the subject(s) of your choice to 
-            <a href="mailto:media@remoteschool.com.ng">media@remoteschool.com.ng</a>
+            <a href="mailto:media@smarthead.com.ng">media@smarthead.com.ng</a>
          </p>
 
         <!-- Start the Pricing Cards -->
