--- a/cmd/web-app/templates/content/dtox-thank-you.html
+++ b/cmd/web-app/templates/content/dtox-thank-you.html
@@ -46,7 +46,7 @@ affordable interactive online private teaching and learning.{{end}}
         <h2 class="section-title">Our Pricing</h2>
         <p class="mb-50">Our price is very affordable for online learning.<br/>
             Pay for any of the plans below and send the subject(s) of your choice to 
-            <a href="mailto:media@remoteschool.com.ng">media@remoteschool.com.ng</a>
+            <a href="mailto:media@smarthead.com.ng">media@smarthead.com.ng</a>
         </p>
       </div>
       <div class="col-lg-10 mx-auto">
@@ -101,7 +101,7 @@ affordable interactive online private teaching and learning.{{end}}
     <div class="row justify-content-center">
       <div class="col-lg-12 text-center">
         <h2 class="section-title">Our Team</h2>
-        <p class="mb-5">Remote School is built on a solid foundation by a team of highly committed partners.</p>
+        <p class="mb-5">Smart Head is built on a solid foundation by a team of highly committed partners.</p>
       </div>
 
       <div class="col-12">
