--- a/cmd/web-app/templates/content/site-index.gohtml
+++ b/cmd/web-app/templates/content/site-index.gohtml
@@ -39,7 +39,7 @@ affordable interactive online private teaching and learning.{{end}}
                                 from learning at his/her pace in the comfort of your house. 
                                 The world has
                                 become a global village and your child may not need to be confined within the
-                                four walls of a school building anymore in order to learn. Remoteschool.com.ng has
+                                four walls of a school building anymore in order to learn. smarthead.com.ng has
                                 got the answer.</p>
                             </div>
                             <div class="d-none d-md-block">
