--- a/cmd/web-app/templates/layouts/landing-page.html
+++ b/cmd/web-app/templates/layouts/landing-page.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>{{block "title" .}}{{end}} - Remote School</title>
+  <title>{{block "title" .}}{{end}} - Smart Head</title>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
