--- a/cmd/web-app/templates/layouts/site.gohtml
+++ b/cmd/web-app/templates/layouts/site.gohtml
@@ -3,7 +3,7 @@
     <html lang="en">
     <head>
         <title>
-            Remote School - {{block "title" .}}{{end}}
+            Smart Head - {{block "title" .}}{{end}}
         </title>
 
         <meta charset="utf-8">
