--- a/cmd/web-app/templates/partials/app-wrapper.tmpl
+++ b/cmd/web-app/templates/partials/app-wrapper.tmpl
@@ -42,7 +42,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container-fluid">
                     <div class="copyright ">
-                            <span>&copy; Copyright 2020 <strong>Remote School</strong> <i>Powered by Merry World Media</i> </span>
+                            <span>&copy; Copyright 2020 <strong>Smart Head</strong> <i>Powered by Merry World Media</i> </span>
                     </div>
 
                 </div>
