--- a/cmd/web-app/templates/partials/site-footer.tmpl
+++ b/cmd/web-app/templates/partials/site-footer.tmpl
@@ -5,7 +5,7 @@
       <div class="row">
         <div class="col-sm-12 col-md-6">
           <h6>About</h6>
-          <p class="text-justify">Remoteschool.com.ng
+          <p class="text-justify">smarthead.com.ng
                is a cloud-based learning platform that offers safe and affordable 
                interactive online teaching and learning</p>
         </div>
