--- a/resources/templates/shared/emails/welcome.raw.html
+++ b/resources/templates/shared/emails/welcome.raw.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Welcome to Remote School</title>
+    <title>Welcome to Smart Head</title>
     <style>
       /* -------------------------------------
           GLOBAL RESETS
@@ -353,11 +353,11 @@
                       <td>
                         <p>Hi {{ .Name }},</p>
                         <p>Thank you for signing up on
-                            <a href="https://www.remoteschool.com.ng" target="_blank">Remote School</a>.
+                            <a href="https://www.smarthead.com.ng" target="_blank">Smart Head</a>.
                            </p>
                         <p>You have successfully unlocked you one week free lesson</p>
                         <p> 
-                            Use the following information to access your free Remote School account<br/>
+                            Use the following information to access your free Smart Head account<br/>
                             <b>Email</b>: {{ .Email }} <b>Password</b>: {{ .Password }}
                         </p>
                         <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
@@ -367,7 +367,7 @@
                                 <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                                   <tbody>
                                     <tr>
-                                      <td> <a href="https://remoteschool.com.ng/user/login" target="_blank">Login</a> </td>
+                                      <td> <a href="https://smarthead.com.ng/user/login" target="_blank">Login</a> </td>
                                     </tr>
                                   </tbody>
                                 </table>
@@ -390,8 +390,8 @@
                               Download Microsoft Teams from Playstore  and install on your phone
                             </ol>
                             <ol>
-                                <a href="https://www.remoteschool.com.ng/login" target="_blank">Login</a> to 
-                                https://www.remoteschool.com.ng using the details provided above.
+                                <a href="https://www.smarthead.com.ng/login" target="_blank">Login</a> to 
+                                https://www.smarthead.com.ng using the details provided above.
                             </ol>
                             <ol>
                               Click Join Classroom on the lesson you want to join.
@@ -414,8 +414,8 @@
                               computer(from https://www.microsoft.com/en-us/microsoft-365/microsoft-teams/download-app
                             </ol>
                             <ol>
-                                <a href="https://www.remoteschool.com.ng/login" target="_blank">Login</a> to 
-                                https://www.remoteschool.com.ng using the details provided above.
+                                <a href="https://www.smarthead.com.ng/login" target="_blank">Login</a> to 
+                                https://www.smarthead.com.ng using the details provided above.
                             </ol>
                             <ol>
                               Click Join Classroom on the lesson you want to join.
@@ -454,14 +454,14 @@
               <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                 <tr>
                   <td class="content-block">
-                    <span class="apple-link"><a href="https://www.remoteschool.com.ng">Remote School</a>, 50 Orile Road, Agege Lagos</span>
-                    <span class="apple-link">https://www.remoteschool.com.ng</span>
+                    <span class="apple-link"><a href="https://www.smarthead.com.ng">Smart Head</a>, 50 Orile Road, Agege Lagos</span>
+                    <span class="apple-link">https://www.smarthead.com.ng</span>
                     <span class="apple-link">+234 701 000 7062</span>
                   </td>
                 </tr>
                 <tr>
                   <td class="content-block powered-by">
-                    Powered by <a href="http://remoteschool.com.ng">Merry World</a>.
+                    Powered by <a href="http://smarthead.com.ng">Merry World</a>.
                   </td>
                 </tr>
               </table>
