--- a/cmd/web-app/templates/content/dtox-about.html
+++ b/cmd/web-app/templates/content/dtox-about.html
@@ -1,5 +1,5 @@
 {{ template "../layouts/dtox.html" .}}
-{{define "title"}}About Remote School{{end}}
+{{define "title"}}About Smart Head{{end}}
 {{define "description"}}Cloud-based learning platform that offers safe and
 affordable interactive online private teaching and learning.{{end}}
 {{define "aboutActive"}}active{{end}}
@@ -56,155 +56,4 @@ affordable interactive online private teaching and learning.{{end}}
   <img src="{{ SiteAssetUrl "/dtox/images/background-shape/service-half-cycle.png" }}" alt="background-shape" class="about-bg-6">
 </section>
 <!-- /about us -->
-
-<!-- product -->
-<section class="section product" style="background-image: url(images/backgrounds/about-bg.png);">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-title">Our Team</h2>
-        <p class="mb-5">Remote School is built on a solid foundation by a team of highly committed partners.</p>
-      </div>
-
-      <div class="col-12">
-      <div class="team-slider">
-        <!-- team-member Anthony-->
-        <div class="team-member">
-            <div class="d-flex mb-4">
-              <div class="mr-3">
-                <img class="rounded-circle img-fluid" src="{{ SiteAssetUrl "/images/remote-school-team--xs-Anthony.jpg" }}" alt="team-member">
-              </div>
-              <div class="align-self-center">
-                <h4>Ademu Anthony</h4>
-                <h6 class="text-color">Director of IT & Innovation</h6>
-              </div>
-            </div>
-            <p style="text-align: justify;">
-              A seasoned Software Engineer who has been consistently praised by clients as competent, 
-              committed & hardworking.
-              An addicted/perpetual learner with an unquenchable thirst for innovation and technology.
-            </p>
-          </div>
-
-        <!-- team-member Abakpa-->
-        <div class="team-member">
-          <div class="d-flex mb-4">
-            <div class="mr-3">
-              <img class="rounded-circle img-fluid" src="{{ SiteAssetUrl "/images/remote-school-team--xs-Abakpa.jpg" }}" alt="team-member">
-            </div>
-            <div class="align-self-center">
-              <h4>Abakpa Joseph Elachi</h4>
-              <h6 class="text-color">Managing Director</h6>
-            </div>
-          </div>
-          <p style="text-align: justify;">
-            Mr Abakpa has a Bachelor of Science Honors degree in Physics
-            from the University of Agriculture Makurdi Benue State, Nigeria in 2012.
-            He has a Diploma in Software Engineering from Global Techs Institute Lagos.
-            
-          </p>
-        </div>
-        
-        <!-- team-member Afanabere-->
-        <div class="team-member">
-            <div class="d-flex mb-4">
-              <div class="mr-3">
-                <img class="rounded-circle img-fluid" src="{{ SiteAssetUrl "/images/remote-school-team--xs-Afanabere.jpg" }}" alt="team-member">
-              </div>
-              <div class="align-self-center">
-                <h4>Afanabere Bernard</h4>
-                <h6 class="text-color">Head Teacher</h6>
-              </div>
-            </div>
-            <p style="text-align: justify;">
-              Afanabere Bernard Akoshi is a trained educationist with more than a decade of working with students. 
-              He is a prolific writer, a teacher, a life coach, and a guest to many seminars and conferences.
-            </p>
-          </div>
-           
-        <!-- team-member Raph-->
-        <div class="team-member">
-            <div class="d-flex mb-4">
-              <div class="mr-3">
-                <img class="rounded-circle img-fluid" src="{{ SiteAssetUrl "/images/remote-school-team-raphael-xs.jpg" }}" alt="team-member">
-              </div>
-              <div class="align-self-center">
-                <h4>Ikediashi Raphael</h4>
-                <h6 class="text-color">Director Of Sales & Marketing</h6>
-              </div>
-            </div>
-            <p style="text-align: justify;">
-              I'm Raphael, a software engineer based in Lagos, Nigeria. I enjoy creating things that live on the internet, 
-              whether that be websites, applications, or anything in between.        
-            </p>
-          </div>
-          
-           <!-- team-member Onoja-->
-        <div class="team-member">
-            <div class="d-flex mb-4">
-              <div class="mr-3">
-                <img class="rounded-circle img-fluid" src="{{ SiteAssetUrl "/images/remote-school-team--xs-onoja.jpg" }}" alt="team-member">
-              </div>
-              <div class="align-self-center">
-                <h4>Onoja Emmanuel</h4>
-                <h6 class="text-color">Platform</h6>
-              </div>
-            </div>
-            <p style="text-align: justify;">
-              An expert in cloud base technologies with MS, MCTS & MCITP in Microsoft Office 365.
-              An experience teacher of Information Technology, Computer Science & Data Processing
-          </p>
-          </div>
-      </div>
-    </div>
-      
-      
-    </div>
-  </div>
-  <!-- background image -->
-  <img src="{{ SiteAssetUrl "/dtox/images/backgrounds/about-bg.png" }}" alt="background-image" class="img-fluid w-100 about-bg"> 
-
-  <!-- our vision -->
-
-  <section class="section">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <h2 class="section-title">Our Vision</h2>
-        <p>To be the clear leader in the provision of online school.</p>
-
-        <h2 class="section-title">Our Mission</h2>
-        <p>To create educational value for the society through sustainable provision of quality education.</p>
-      </div>
-      <div class="col-md-6">
-        <img src="{{ SiteAssetUrl "/dtox/images/about/vision.png" }}" alt="vision" class="img-fluid w-100">
-      </div>
-    </div>
-  </div>
-</section>
-<!-- /our vision -->
-
-<!-- clients -->
-<!-- <section class="section">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-title">Our Clients</h2>
-        <ul class="list-inline text-center">
-          <li class="list-inline-item mx-5 mb-5"><a href="#"><img src="{{ SiteAssetUrl "/dtox/images/clients-logo/client-1.png" }}" alt="clients-logo" class="img-fluid"></a></li>
-          <li class="list-inline-item mx-5 mb-5"><a href="#"><img src="{{ SiteAssetUrl "/dtox/images/clients-logo/client-2.png" }}" alt="clients-logo" class="img-fluid"></a></li>
-          <li class="list-inline-item mx-5 mb-5"><a href="#"><img src="{{ SiteAssetUrl "/dtox/images/clients-logo/client-3.png" }}" alt="clients-logo" class="img-fluid"></a></li>
-          <li class="list-inline-item mx-5 mb-5"><a href="#"><img src="{{ SiteAssetUrl "/dtox/images/clients-logo/client-4.png" }}" alt="clients-logo" class="img-fluid"></a></li>
-          <li class="list-inline-item mx-5 mb-5"><a href="#"><img src="{{ SiteAssetUrl "/dtox/images/clients-logo/client-5.png" }}" alt="clients-logo" class="img-fluid"></a></li>
-          <li class="list-inline-item mx-5 mb-5"><a href="#"><img src="{{ SiteAssetUrl "/dtox/images/clients-logo/client-6.png" }}" alt="clients-logo" class="img-fluid"></a></li>
-          <li class="list-inline-item mx-5 mb-5"><a href="#"><img src="{{ SiteAssetUrl "/dtox/images/clients-logo/client-7.png" }}" alt="clients-logo" class="img-fluid"></a></li>
-          <li class="list-inline-item mx-5 mb-5"><a href="#"><img src="{{ SiteAssetUrl "/dtox/images/clients-logo/client-8.png" }}" alt="clients-logo" class="img-fluid"></a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</section> -->
-<!-- /clients -->
-</section>
-<!-- /product -->
 {{ end }}
