--- a/cmd/web-app/templates/content/waec-neco-prep.html
+++ b/cmd/web-app/templates/content/waec-neco-prep.html
@@ -13,7 +13,7 @@
       <div class="col-lg-12 text-center">
         <h1 class="mb-3">Enjoy world class interactive online classes from the comfort of your home</h1>
         <p class="mb-4">
-            Remote School uses advancement in technology to bring Real Classes to Real Students from Real Teachers
+            Smart Head uses advancement in technology to bring Real Classes to Real Students from Real Teachers
         </p>
       </div>
     </div>
@@ -83,9 +83,9 @@
             and those who must learn away from the classroom, may not make sufficient progress with 
             traditional online resources.</p>
 
-            <p>Remote School has a different approach. Our team of qualified, 
+            <p>Smart Head has a different approach. Our team of qualified, 
                 experienced teachers deliver high-quality lessons, live online via the 
-                innovative Remote School Cloud Learning platform.</p>
+                innovative Smart Head Cloud Learning platform.</p>
             
             <p>They work closely with your teachers to plan the additional support that will be 
                 right for the learning needs of each student.</p>
@@ -108,9 +108,9 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-title">Meet Remote School</h2>
+        <h2 class="section-title">Meet Smart Head</h2>
         <p class="mb-100">
-            Remote School is built to give students the same experience that is associated with 
+            Smart Head is built to give students the same experience that is associated with 
             physical classes.<br>To achieve this, we abide by the following principles</p>
       </div>
       <!-- feature item -->
@@ -121,7 +121,7 @@
           </div>
           <div>
             <h4>Professionalism</h4>
-            <p>Remote School gives great interest and attention to the KNOWLEDGE, 
+            <p>Smart Head gives great interest and attention to the KNOWLEDGE, 
                 SKILL and PRACTICES that teachers must have in order to be effective educators.</p>
           </div>
         </div>
@@ -150,7 +150,7 @@
           <div>
             <h4>Loyalty</h4>
             <p>
-                In Remote School, we pledge ALLEGIANCE to our students for their academic success no matter the cost. 
+                In Smart Head, we pledge ALLEGIANCE to our students for their academic success no matter the cost. 
             </p>
           </div>
         </div>
@@ -198,7 +198,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-title">Our Team</h2>
-        <p class="mb-100">Remote School is built on a solid foundation by a team of highly committed partners</p>
+        <p class="mb-100">Smart Head is built on a solid foundation by a team of highly committed partners</p>
       </div>
     </div>
     <div class="col-12">
