--- a/cmd/web-app/templates/layouts/base.gohtml
+++ b/cmd/web-app/templates/layouts/base.gohtml
@@ -3,7 +3,7 @@
     <html lang="en">
     <head>
         <title>
-            {{block "title" .}}{{end}} - Remote School
+            {{block "title" .}}{{end}} - Smart Head
         </title>
 
         <meta charset="utf-8">
