--- a/cmd/web-app/templates/layouts/dtox.html
+++ b/cmd/web-app/templates/layouts/dtox.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Remote School - {{block "title" .}}{{end}}</title>
+  <title>Smart Head - {{block "title" .}}{{end}}</title>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -69,7 +69,7 @@
 <section class="fixed-top navigation">
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="/"><img src="{{ SiteAssetUrl "/images/Remote-school-logo-light.png" }}" alt="Remote School" style="height: 64px;"></a>
+      <a class="navbar-brand" href="/"><img src="{{ SiteAssetUrl "/images/smarthead/smarthead-dark.jpeg" }}" alt="Smart Head" style="height: 64px;"></a>
       <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar"
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -114,7 +114,7 @@
       <div class="col-lg-4 text-center text-lg-left mb-4 mb-lg-0">
         <!-- logo -->
         <a href="/">
-          <img class="img-fluid" src="{{ SiteAssetUrl "/images/Remote-school-logo-dark.png" }}" alt="Remote School" style="height: 64px;">
+          <img class="img-fluid" src="{{ SiteAssetUrl "/images/Remote-school-logo-dark.png" }}" alt="Smart Head" style="height: 64px;">
         </a>
       </div>
       <!-- footer menu -->
