--- a/cmd/web-app/templates/partials/app-sidebar.tmpl
+++ b/cmd/web-app/templates/partials/app-sidebar.tmpl
@@ -4,7 +4,7 @@
 
         <!-- Sidebar - Brand -->
         <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/">
-        <img alt="REMOTE SCHOOL" class="logo" style="height:60px;" src="{{ SiteAssetUrl "/images/remote-school-logo.png" }}">
+        <img alt="Smart Head" class="logo" style="width:200px;" src="{{ SiteAssetUrl "/images/smarthead/smarthead-dark.jpeg" }}">
         </a>
  
         {{ if HasAuth $._Ctx }}
