--- a/resources/templates/shared/emails/welcome_email.html
+++ b/resources/templates/shared/emails/welcome_email.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Welcome to Remote School</title>
+    <title>Welcome to Smart Head</title>
     <style>
 @media only screen and (max-width: 620px) {
   table[class=body] h1 {
@@ -118,11 +118,11 @@ table[class=body] .article {
                       <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;" valign="top">
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">Hi {{ .Name }},</p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">Thank you for signing up on
-                            <a href="https://www.remoteschool.com.ng" target="_blank" style="color: #3498db; text-decoration: underline;">Remote School</a>.
+                            <a href="https://www.smarthead.com.ng" target="_blank" style="color: #3498db; text-decoration: underline;">Smart Head</a>.
                            </p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">You have successfully unlocked you one week free lesson</p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;"> 
-                            Use the following information to access your free Remote School account<br>
+                            Use the following information to access your free Smart Head account<br>
                             <b>Email</b>: {{ .Email }} <b>Password</b>: {{ .Password }}
                         </p>
                         <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; box-sizing: border-box; width: 100%;" width="100%">
@@ -132,7 +132,7 @@ table[class=body] .article {
                                 <table role="presentation" border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: auto;">
                                   <tbody>
                                     <tr>
-                                      <td style="font-family: sans-serif; font-size: 14px; vertical-align: top; border-radius: 5px; text-align: center; background-color: #3498db;" valign="top" align="center" bgcolor="#3498db"> <a href="https://www.remoteschool.com.ng/login" target="_blank" style="border: solid 1px #3498db; border-radius: 5px; box-sizing: border-box; cursor: pointer; display: inline-block; font-size: 14px; font-weight: bold; margin: 0; padding: 12px 25px; text-decoration: none; text-transform: capitalize; background-color: #3498db; border-color: #3498db; color: #ffffff;">Login</a> </td>
+                                      <td style="font-family: sans-serif; font-size: 14px; vertical-align: top; border-radius: 5px; text-align: center; background-color: #3498db;" valign="top" align="center" bgcolor="#3498db"> <a href="https://www.smarthead.com.ng/login" target="_blank" style="border: solid 1px #3498db; border-radius: 5px; box-sizing: border-box; cursor: pointer; display: inline-block; font-size: 14px; font-weight: bold; margin: 0; padding: 12px 25px; text-decoration: none; text-transform: capitalize; background-color: #3498db; border-color: #3498db; color: #ffffff;">Login</a> </td>
                                     </tr>
                                   </tbody>
                                 </table>
@@ -155,8 +155,8 @@ table[class=body] .article {
                               Download Microsoft Teams from Playstore  and install on your phone
                             </ol>
                             <ol style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
-                                <a href="https://remoteschool.com.ng/user/login" target="_blank" style="color: #3498db; text-decoration: underline;">Login</a> to 
-                                https://www.remoteschool.com.ng using the details provided above.
+                                <a href="https://smarthead.com.ng/user/login" target="_blank" style="color: #3498db; text-decoration: underline;">Login</a> to 
+                                https://www.smarthead.com.ng using the details provided above.
                             </ol>
                             <ol style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
                               Click Join Classroom on the lesson you want to join.
@@ -179,8 +179,8 @@ table[class=body] .article {
                               computer(from https://www.microsoft.com/en-us/microsoft-365/microsoft-teams/download-app
                             </ol>
                             <ol style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
-                                <a href="https://www.remoteschool.com.ng/login" target="_blank" style="color: #3498db; text-decoration: underline;">Login</a> to 
-                                https://www.remoteschool.com.ng using the details provided above.
+                                <a href="https://www.smarthead.com.ng/login" target="_blank" style="color: #3498db; text-decoration: underline;">Login</a> to 
+                                https://www.smarthead.com.ng using the details provided above.
                             </ol>
                             <ol style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
                               Click Join Classroom on the lesson you want to join.
@@ -219,14 +219,14 @@ table[class=body] .article {
               <table role="presentation" border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;" width="100%">
                 <tr>
                   <td class="content-block" style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; color: #999999; font-size: 12px; text-align: center;" valign="top" align="center">
-                    <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;"><a href="https://www.remoteschool.com.ng" style="text-decoration: underline; color: #999999; font-size: 12px; text-align: center;">Remote School</a>, 50 Orile Road, Agege Lagos</span>
-                    <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;">https://www.remoteschool.com.ng</span>
+                    <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;"><a href="https://www.smarthead.com.ng" style="text-decoration: underline; color: #999999; font-size: 12px; text-align: center;">Smart Head</a>, 50 Orile Road, Agege Lagos</span>
+                    <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;">https://www.smarthead.com.ng</span>
                     <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;">+234 701 000 7062</span>
                   </td>
                 </tr>
                 <tr>
                   <td class="content-block powered-by" style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; color: #999999; font-size: 12px; text-align: center;" valign="top" align="center">
-                    Powered by <a href="http://remoteschool.com.ng" style="color: #999999; font-size: 12px; text-align: center; text-decoration: none;">Merry World</a>.
+                    Powered by <a href="http://smarthead.com.ng" style="color: #999999; font-size: 12px; text-align: center; text-decoration: none;">Merry World</a>.
                   </td>
                 </tr>
               </table>
